# issue-reporter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  issue-reporter.example.conf  issue-reporter.example.json  issue-reporter.js  issue-reporter.sh  issue_reporter.py  pyproject.toml  server.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml
docs/: index.html
tests/: test_input_validation.py  test_server_http.py
