[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-reporter"
version = "2.2.0"
description = "Drop a feedback button on any web page. Reports become GitHub issues. No dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Ray Ketcham"}]

dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
issue-reporter = "issue_reporter:main"

[tool.setuptools]
py-modules = ["issue_reporter"]
